<resources>
    <string name="app_name">Register App</string>
    <string name="photo">photo</string>
    <string name="union_pink">union_pink</string>
    <string name="union_black">union_black</string>
    <string name="sign_up"> <b>Sign Up</b> </string>
    <string name="log_in"> <b>Log In</b> </string>
    <string name="register">Register</string>
    <string name="next"> <b>NEXT</b> </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="back">back</string>
    <string name="username">Username</string>
    <string name="privacy_policy">By signing up, you agree to Photo’s <u>Terms of Service</u> and \n <u>Privacy Policy</u>.</string>
    <string name="welcome">Welcome!</string>
    <string name="log_out">Log out</string>
</resources>