<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivityUsername"
    android:background="@color/white">

    <ImageView
        android:id="@+id/backImageViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/back"
        android:contentDescription="@string/back" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa_bold"
        android:letterSpacing="-0.01"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="36sp" />


    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/custom_edit_text"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColorHint="@color/black"
        tools:ignore="RtlSymmetry" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignUpUsername"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_log_in"
        android:text="@string/sign_up"
        android:textColor="@color/white" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/privacy_policy"
        android:textColor="@color/black" />
</LinearLayout>