<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:background="@color/white">


    <ImageView
        android:id="@+id/backImageViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/back"
        android:contentDescription="@string/back" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa_bold"
        android:letterSpacing="-0.01"
        android:text="@string/register"
        android:textSize="36sp"
        android:textColor="@color/black"/>


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/custom_edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:textColorHint="@color/black"/>


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry"
        android:textColorHint="@color/black"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_log_in"
        android:text="@string/next"
        android:textColor="@color/white" />


</LinearLayout>