<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/unionPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="70dp"
            android:background="@drawable/union"
            android:contentDescription="@string/union_pink" />


        <ImageView
            android:id="@+id/unionBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="70dp"
            android:background="@drawable/union_1"
            android:contentDescription="@string/union_black" />


        <TextView
            android:id="@+id/photoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/comfortaa_bold"
            android:letterSpacing="-0.01"
            android:text="@string/photo"
            android:textColor="@color/black"
            android:textSize="48sp" />


    </FrameLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogIn"
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/button_sign_up"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignUp"
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/button_log_in"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>